<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:background="@color/colorborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow >
            <Button
                android:id="@+id/button_clear"
                android:text="@string/clear"
                style="@style/whiteButonStyle"
                />
            <Button
                android:id="@+id/button_insever"
                android:text="@string/add"
                style="@style/whiteButonStyle"
                />
            <Button
                android:id="@+id/button_percent"
                android:text="@string/percent"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_divide"
                android:text="@string/divide"
                style="@style/orangeButtonStyle"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/button_7"
                android:text="@string/seven"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_8"
                android:text="@string/eight"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_9"
                android:text="@string/nine"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_multiply"
                android:text="@string/multi"
                style="@style/orangeButtonStyle"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/button_4"
                android:text="@string/four"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_5"
                android:text="@string/five"
                android:background="@color/colorButton"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_6"
                android:text="@string/six"
                android:background="@color/colorButton"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_subtract"
                android:text="@string/sub"
                style="@style/orangeButtonStyle"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/button_1"
                android:text="@string/one"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_2"
                android:text="@string/two"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_3"
                android:text="@string/three"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_plus"
                android:text="@string/plus"
                style="@style/orangeButtonStyle"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/button_0"
                android:layout_height="60dp"
                android:layout_width="96dp"
                android:background="@color/colorButton"
                android:text="@string/zero"
                tools:ignore="ButtonStyle" />
            <Button
                android:background="@color/colorButton"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_point"
                android:text="@string/point"
                style="@style/whiteButonStyle"/>
            <Button
                android:id="@+id/button_result"
                android:text="@string/result"
                style="@style/orangeButtonStyle"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
